fix mobile menu overflow

--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -53,6 +53,10 @@ footer{
     flex: 0 0 auto;
 }
 
+.overflow-hidden{
+    overflow: hidden;
+}
+
 /* Blocks */
 
 .topline{
